--- a/cinema/src/main/resources/static/css/header.css
+++ b/cinema/src/main/resources/static/css/header.css
@@ -2,6 +2,7 @@ header{
     font-family: 'Poppins', sans-serif !important;
     position: fixed;
     top: 0;
+    left: 0;
     width: 100%;
     height: 100px;
     background-color: black;
