add profile page

--- a/cinema/src/main/resources/templates/booking.html
+++ b/cinema/src/main/resources/templates/booking.html
@@ -30,9 +30,6 @@
             <a th:href="@{/movie}">
                 <li>Фільми</li>
             </a>
-            <a>
-                <li>Розклад сеансів</li>
-            </a>
             <a th:href="@{/info}">
                 <li>Про нас</li>
             </a>
@@ -42,8 +39,8 @@
     <div class="dropdown">
         <button hidden id="user-button"></button>
         <div class="dropdown-content">
-            <a th:href="@{/account-managment}">Управління акаутом</a>
-            <a th:href="@{/booking}">Ваші замовлення</a>
+            <a th:href="@{/account}">Управління акаутом</a>
+            <a th:href="@{/account/booking}">Ваші замовлення</a>
         </div>
     </div>
 </header>
