--- a/cinema/src/main/resources/static/css/style.css
+++ b/cinema/src/main/resources/static/css/style.css
@@ -122,8 +122,11 @@ body {
 
 .dropdown-content {
     display: none;
+    right: 85px;
     position: absolute;
     background-color: #f9f9f9;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
     min-width: 160px;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     z-index: 1;
@@ -134,6 +137,7 @@ body {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    border-radius: 30px;
 }
 
 .dropdown-content a:hover {
