--- a/cinema/src/main/resources/templates/movies.html
+++ b/cinema/src/main/resources/templates/movies.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="/css/header.css">
     <link rel="stylesheet" type="text/css" href="/css/popup.css">
     <link rel="stylesheet" type="text/css" href="/css/all-movies.css">
+    <link rel="icon" type="image/x-icon" href="/img/icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
