add user profile changes saving, tickets generation

--- a/cinema/src/main/resources/templates/profile.html
+++ b/cinema/src/main/resources/templates/profile.html
@@ -80,12 +80,12 @@
         <button id="ticket-box-button">Квитки</button>
         <div id="profile-box">
             <div class="user-info-box">
-                <h1 class="box-header">Вітаємо, Андрій</h1>
+                <h1 class="box-header"></h1>
                 <div class="user-info">
                     <div class="info-section">
                         <p class="field-name">Імʼя</p>
                         <p class="field-info">
-                            <input type="text" class="change-input-field" name="first-name" id="first-name-input"
+                            <input type="text" class="change-input-field" name="name" id="first-name-input"
                                    placeholder="Введіть нове імʼя">
                             <span id="first-name" class="info-text"></span>
                             <span class="material-symbols-outlined edit-icon" id="first-name-button">edit_square</span>
@@ -94,7 +94,7 @@
                     <div class="info-section">
                         <p class="field-name">Прізвище</p>
                         <p class="field-info">
-                            <input type="text" class="change-input-field" name="last-name" id="last-name-input"
+                            <input type="text" class="change-input-field" name="surname" id="last-name-input"
                                    placeholder="Введіть нове прізвище">
                             <span id="last-name" class="info-text"></span>
                             <span class="material-symbols-outlined edit-icon" id="last-name-button">edit_square</span>
@@ -114,7 +114,7 @@
                         <p class="field-info">
                             <input type="password" class="change-input-field" name="password" id="password-input"
                                    placeholder="Введіть новий пароль">
-                            <span id="user-password" class="info-text">********</span>
+                            <span id="user-password" class="info-text"></span>
                             <span class="material-symbols-outlined edit-icon" id="password-button">edit_square</span>
                         </p>
                     </div>
