--- a/cinema/src/main/resources/templates/booking.html
+++ b/cinema/src/main/resources/templates/booking.html
@@ -75,7 +75,7 @@
         <button id="login-form-button"> Увійти в обліковий запис</button>
     </div>
 </div>
-
+<main>
 <div class="main-container">
     <!--<div class="poster-container">
         <img src="https://assets-global.website-files.com/6009ec8cda7f305645c9d91b/6408f6e7b5811271dc883aa8_batman-min.png">
@@ -140,7 +140,18 @@
 
     </div>
 
-
+</main>
+<footer>
+    <p class="footer-description">
+        <a href="https://web.telegram.org/" class="footer-icon">
+            <img src="/img/telegram.svg"  alt="telegram">
+        </a>
+        <a href="https://www.instagram.com/" class="footer-icon">
+            <img src="/img/instagram.svg"  alt="instagram">
+        </a>
+        <span id="text-description" >2023 QUAD Cinema | Всі права захищені</span>
+    </p>
+</footer>
 
 
 <script src="/js/common/header.js"></script>
