--- a/cinema/src/main/resources/templates/contacts.html
+++ b/cinema/src/main/resources/templates/contacts.html
@@ -75,49 +75,38 @@
 </div>
 
 
-    <main>
-        <div id="topSection">
-            <h1>Про нас</h1>
-            <img id="ourLogo"src="https://cdn.discordapp.com/attachments/1094256351284318209/1094280342426374325/Screenshot_2023-04-08_at_1easasdasdasd.11.55.png" alt="logo">
+<main>
+
+    <img src="/img/icon.png" class="logo-img" alt="logo">
+    <p class="project-description">QUAD Cinema - це веб-орієнтована система обслуговування відвідувачів мережі
+        кінотеатрів QUAD Cinema </p>
+    <p class="dev-header">Розробники</p>
+    <div class="dev-info">
+        <div class="dev-names">
+            <p>Марич Андрій</p>
+            <p>Дручок Василь</p>
+            <p>Козирський Микола-Віталій</p>
+            <p>Богородецький Вадим</p>
         </div>
-        <div id="panelSection">
-            <div class="panel">
-                <input type="checkbox" id="check1">
-                <label for="check1" class="panelHead">Як все починалось<img src="/static/assets/Expand_down.png"></label>
-                <div class="panelContent content1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est architecto qui veniam asperiores blanditiis explicabo non fugiat, illum, consequuntur aut animi mollitia modi dolore, inventore voluptate? Alias, vel atque animi perspiciatis porro, amet odio excepturi totam quibusdam illum explicabo possimus, tenetur necessitatibus architecto repellat ratione cupiditate quidem sunt culpa? Eaque.</div>
-            </div>
-            <div class="panel">
-                <input type="checkbox" id="check2">
-                <label for="check2" class="panelHead">Наші переваги<img src="/static/assets/Expand_down.png"></label>
-                <div class="panelContent content2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est architecto qui veniam asperiores blanditiis explicabo non fugiat, illum, consequuntur aut animi mollitia modi dolore, inventore voluptate? Alias, vel atque animi perspiciatis porro, amet odio excepturi totam quibusdam illum explicabo possimus, tenetur necessitatibus architecto repellat ratione cupiditate quidem sunt culpa? Eaque.</div>
-            </div>
+        <div class="dev-position">
+            <p>Project manager, frontend developer</p>
+            <p>Tech lead, backend developer</p>
+            <p>Backend developer</p>
+            <p>Frontend Developer</p>
         </div>
-    </main>
-    <footer>
-        <div class="footerWrapper">
-            <img src="https://cdn.discordapp.com/attachments/1094256351284318209/1094280342426374325/Screenshot_2023-04-08_at_1easasdasdasd.11.55.png" alt="logo" id="logo--bottom">
-            <div>
-                <h3>NULP films</h3>
-                <p>Зробили ми - для вас</p>
-            </div>
-            <div>
-                <h3>Зв'яжіться з нами</h3>
-                <span class="sociaLogoContainer">
-                    <img src="/static/assets/Facebook.png" alt="fb">
-                    <img src="/static/assets/Twitter.png" alt="tw">
-                    <img src="/static/assets/Instagram.png" alt="inst">
-                    <img src="/static/assets/Youtube.png" alt="yt">
-                </span>
-            </div>
-        </div>
-        <div class="bottomText">
-            <ul>
-                <li><a href="#">Site Terms</a></li>
-                <li><a href="#">Privacy Policy/Your Policy Rights</a></li>
-                <li><a href="#">State Disclosures</a></li>
-            </ul>
-        </div>
-    </footer>
+    </div>
+</main>
+<footer>
+    <p class="footer-description">
+        <a href="https://web.telegram.org/" class="footer-icon">
+            <img src="/img/telegram.svg" alt="telegram">
+        </a>
+        <a href="https://www.instagram.com/" class="footer-icon">
+            <img src="/img/instagram.svg" alt="instagram">
+        </a>
+        <span id="text-description">2023 QUAD Cinema | Всі права захищені</span>
+    </p>
+</footer>
 <script src="/js/common/header.js"></script>
 <script type="module" src="/js/contact/contacts.js"></script>
 </body>
