--- a/cinema/src/main/resources/templates/movies.html
+++ b/cinema/src/main/resources/templates/movies.html
@@ -77,26 +77,20 @@
     <main>
 
         <div id="movie-card-box" class="filmsWrapper">
-<!--            <div class="card">-->
-<!--                <div class="poster">-->
-<!--                    <img id="bigImg" src="https://www.kinolumiere.com/uploads/films/1681206161_Renfield_1920x800_Lumiere.jpg" alt="bigLogo">-->
-<!--                </div>-->
-<!--                <div class="information">-->
-<!--                    <h1>Вавилон</h1>-->
-<!--                    <p style="font-weight: bold;">Рік: <span id="year">2023</span></p>-->
-<!--                    <p style="font-weight: bold;">Тривалість: <span id="duration">189 хв.</span></p>-->
-<!--                    <p style="font-weight: bold;">Жанр: <span id="genre">історичний, драма</span></p>-->
-<!--                    <p class="movieDescription">Лауреат премії «Оскар» Демієн Шазелл збирає неповторний зірковий каст-->
-<!--                    та запрошує поринути в Лос-Анджелес 1920-х років! -->
-<!--                    Зустрічайте на великому екрані Бреда Пітта, Марґо Роббі, Дієго Кальву, -->
-<!--                    Тобі Маґвайра й Олівію Вайлд в епічній кіноісторії. Шалена -->
-<!--                    розповідь про величезні амбіції та надмірну дозволеність розкаже про злети -->
-<!--                    та падіння в епоху декадансу та розпусти в ранньому Голлівуді.</p>-->
-<!--                </div>-->
-<!--            </div>-->
+
         </div>
     </main>
-<footer></footer>
+<footer>
+    <p class="footer-description">
+        <a href="https://web.telegram.org/" class="footer-icon">
+            <img src="/img/telegram.svg"  alt="telegram">
+        </a>
+        <a href="https://www.instagram.com/" class="footer-icon">
+            <img src="/img/instagram.svg"  alt="instagram">
+        </a>
+        <span id="text-description" >2023 QUAD Cinema | Всі права захищені</span>
+    </p>
+</footer>
 
 <script src="/js/common/header.js"></script>
 <script type="module" src="/js/movie/movies_page.js"></script>
