--- a/cinema/src/main/resources/static/css/booking.css
+++ b/cinema/src/main/resources/static/css/booking.css
@@ -432,3 +432,12 @@ p.text span {
         font-size: 18px
     }
 }
+@media (max-width: 1300px) {
+    .order-container{
+        position: static;
+        margin-left: 23%;
+    }
+    .showcase-container{
+        margin-left: 30px;
+    }
+}
