--- a/cinema/src/main/resources/static/css/contacts.css
+++ b/cinema/src/main/resources/static/css/contacts.css
@@ -1,123 +1,59 @@
-body{
+
+
+.logo-img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    height: 270px;
+    width: 360px;
+    margin-top:120px;
+}
+.project-description{
+    font-weight: 300;
+    font-size: 22px;
+    margin-top:25px;
+    margin-left: auto;
+    margin-right: auto;
     color: white;
+    text-align: center;
 }
+.dev-header{
+    font-weight: 300;
+    font-size: 22px;
+    margin-top:55px;
+    margin-left: 45%;
+    margin-right: auto;
+    color: white;
 
-h1{
-    font-size: 50px;
-    font-weight: bold;
-    margin-bottom: 2rem;
 }
-
-#topSection{
+.dev-info{
     display: flex;
+    gap: 100px;
+    position: relative;
+    height: 250px;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    transition: all 0.5s;
 }
+.dev-info:last-child {
 
-#ourLogo{
-    width: 45%;
 }
+.dev-names{
 
-/* PANELS */
+    text-align: center;
 
-#panelSection{
-    width: 90%;
-    margin: 0 auto;
-    padding: 20px;
+
+
 }
-
-.panel{
-    margin-bottom: 40px;
-    transition: all 0.5s;
+.dev-names p{
+    color: #c1c1c1;
+   font-size: 19px;
+    font-weight: 300;
 }
-
-.panelHead{
-    margin-bottom: 16px;
-    font-size: 2rem;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    cursor: pointer;
-}
-
-#check1,#check2{
-    display: none;
-}
-
-@keyframes appear {
-    from{
-        opacity: 0;
-    }
-    to{
-        opacity: 1;
-    }
-}
-
-.panelContent{
-    display: none;
-    animation: appear 1s;
-}
-
-label{
-    display: inline-block;
-}
-
-#check1:checked ~ .content1{
-    display: block;
-}
-
-#check2:checked ~ .content2{
-    display: block;
-}
-
-#check1:checked ~ .panelContent{
-    height: auto;
-}
-
-/* FOOTER */
-.sociaLogoContainer{
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.sociaLogoContainer img{
-    width: 12%;
-}
-
-#logo--bottom{
-    display: inline-block;
-    width: 160px;
-}
-
-footer{
-    font-size: 1.2em;
-}
-
-.bottomText{
+.dev-position{
     text-align: center;
 }
-
-.bottomText > u, .bottomText p{
-    margin: 30px;
-}
-
-.bottomText > ul > li{
-    display: inline;
-    padding: 32px;
-    margin: 12px;
-}
-
-.bottomText a{
-    text-decoration: none;
-    color: #424242;
-}
-
-footer p,h3{
-    text-align: center;
-}
-.footerWrapper{
-    display: grid;
-    grid-template-columns: 0.4fr 1fr 1fr;
-    grid-auto-rows: minmax(100px, auto);
+.dev-position p{
+    color: #c1c1c1;
+    font-size: 19px;
+    font-weight: 300;
 }
