--- a/cinema/src/main/resources/static/css/popup.css
+++ b/cinema/src/main/resources/static/css/popup.css
@@ -128,6 +128,7 @@
     cursor: pointer;
 }
 #close-login-button, #close-registration-button{
+    color: black;
     position: absolute;
     top: 25px;
     right:25px;
