--- a/cinema/src/main/resources/static/css/style.css
+++ b/cinema/src/main/resources/static/css/style.css
@@ -157,3 +157,21 @@ body {
 footer{
     height: 100px;
 }
+.footer-description {
+    position: relative;
+    top: 45px;
+    text-align: center;
+    color: #727272;
+    font-size: 17px;
+}
+.footer-icon{
+    position: inherit;
+    margin-left: 10px;
+    top:7px;
+    display: inline-flex;
+    height: 27px;
+    width: 27px;
+}
+#text-description{
+    margin-left: 10px;
+}
