--- a/cinema/src/main/resources/templates/index.html
+++ b/cinema/src/main/resources/templates/index.html
@@ -97,6 +97,17 @@
     </footer>
 </main>
 
+<footer>
+    <p class="footer-description">
+        <a href="https://web.telegram.org/" class="footer-icon">
+            <img src="/img/telegram.svg"  alt="telegram">
+        </a>
+        <a href="https://www.instagram.com/" class="footer-icon">
+            <img src="/img/instagram.svg"  alt="instagram">
+        </a>
+        <span id="text-description" >2023 QUAD Cinema | Всі права захищені</span>
+    </p>
+</footer>
 <script src="/js/common/header.js"></script>
 <script type="module" src="/js/index/index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
