--- a/cinema/src/main/resources/templates/movie.html
+++ b/cinema/src/main/resources/templates/movie.html
@@ -81,11 +81,7 @@
 
 
 <main>
-    <!--<div class="link-tree">
-        <a href="/templates/index.html">Quad Cinema</a><img src="/static/assets/Expand_right.png" alt="->">
-        <a href="#">Фільми</a><img src="/static/assets/Expand_right.png" alt="->">
-        <a href="#">Вавилон</a><img src="/static/assets/Expand_right.png" alt="->">
-    </div>-->
+
     <div class="nav-container" >
         <nav>
             <ul id = "movie-navigation">
@@ -146,7 +142,17 @@
     </div>
 
 </main>
-<footer></footer>
+<footer>
+    <p class="footer-description">
+        <a href="https://web.telegram.org/" class="footer-icon">
+            <img src="/img/telegram.svg"  alt="telegram">
+        </a>
+        <a href="https://www.instagram.com/" class="footer-icon">
+            <img src="/img/instagram.svg"  alt="instagram">
+            </a>
+        <span id="text-description" >2023 QUAD Cinema | Всі права захищені</span>
+            </p>
+</footer>
 <script src="/js/common/header.js"></script>
 <script type="module" src="/js/movie/movie.js"></script>
 
