--- a/cinema/src/main/resources/templates/profile.html
+++ b/cinema/src/main/resources/templates/profile.html
@@ -80,7 +80,7 @@
         <button id="ticket-box-button">Квитки</button>
         <div id="profile-box">
             <div class="user-info-box">
-                <h1 class="box-header"></h1>
+                <h1 id ="username-header" class="box-header"></h1>
                 <div class="user-info">
                     <div class="info-section">
                         <p class="field-name">Імʼя</p>
@@ -139,9 +139,20 @@
             </div>
         </div>
     </div>
-    </div>
+
 
 </main>
+<footer>
+    <p class="footer-description">
+        <a href="https://web.telegram.org/" class="footer-icon">
+            <img src="/img/telegram.svg"  alt="telegram">
+        </a>
+        <a href="https://www.instagram.com/" class="footer-icon">
+            <img src="/img/instagram.svg"  alt="instagram">
+        </a>
+        <span id="text-description" >2023 QUAD Cinema | Всі права захищені</span>
+    </p>
+</footer>
 <script src="/js/common/header.js"></script>
 <script type="module" src="/js/profile/profile.js"></script>
 </body>
