--- a/cinema/src/main/resources/templates/profile.html
+++ b/cinema/src/main/resources/templates/profile.html
@@ -119,7 +119,10 @@
                         </p>
                     </div>
                 </div>
-                <button id="save-button">Зберегти зміни</button>
+                <a th:href="@{/account}">
+                    <button id="save-button" >Зберегти зміни</button>
+                </a>
+
             </div>
         </div>
         <div id="ticket-box">
